--- a/Website/blog-4-week.html
+++ b/Website/blog-4-week.html
@@ -35,9 +35,9 @@
     <main class="container py-5">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <span class="badge bg-primary mb-2">Extended Trip</span>
+                <span class="badge bg-danger mb-2">Itinerary</span>
                 <h1 class="display-4 fw-bold mb-3">Four Weeks Across the Peninsula</h1>
-                <p class="text-muted mb-5 border-bottom pb-4">By [Author Name] | Coming Soon</p>
+                <p class="text-muted mb-5 border-bottom pb-4">By Kai Suho Croci | October 2025</p>
 
                 <div class="blog-content">
                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -58,7 +58,7 @@
     </main>
 
     <footer class="bg-light text-center py-4 mt-5 border-top">
-        <div class="container"><p class="mb-0 text-muted">© 2024 South Korea Digital Guide | IDPA Project</p></div>
+        <div class="container"><p class="mb-0 text-muted">© 2025 South Korea Digital Guide | IDPA Project</p></div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
