--- a/Website/index.html
+++ b/Website/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | South Korea Guide</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
@@ -37,29 +41,35 @@
             <div class="col-lg-6">
                 <h1 class="display-3 fw-bold mb-4">Discover the Soul of <span class="text-danger">Korea</span>.</h1>
                 <p class="lead mb-4">
-                    In recent years, South Korea has become one of the most fascinating destinations for young travelers[cite: 3]. 
-                    Its unique combination of traditional culture, modern technology, and a diverse food scene has attracted increasing global attention[cite: 4].
+                    In recent years, South Korea has become one of the most fascinating destinations for young
+                    travelers.
+                    Its unique combination of traditional culture, modern technology, and a diverse food scene has
+                    attracted increasing global attention.
                 </p>
                 <p class="text-muted mb-4">
-                    This project combines a travel guide, personal blogs, and a glossary to give you the ultimate starting point for your journey.
+                    This project combines a travel guide, personal blogs, and a glossary to give you the ultimate
+                    starting point for your journey.
                 </p>
                 <div class="d-flex gap-3">
-                    <a href="blog-2-week.html" class="btn btn-dark btn-lg rounded-pill px-4">Read the Blog</a>
-                    <a href="travel-guide.html" class="btn btn-outline-dark btn-lg rounded-pill px-4">Travel Guide</a>
+                    <a href="blog-2-week.html" class="btn btn-custom-blue btn-lg rounded-pill px-4">2 Week Blog</a>
+                    <a href="blog-4-week.html" class="btn btn-outline-custom-blue btn-lg rounded-pill px-4">4 Week
+                        Blog</a>
                 </div>
             </div>
             <div class="col-lg-6 mt-5 mt-lg-0 text-center">
-                <img src="https://images.unsplash.com/photo-1538669714434-a92433980329?q=80&w=1000&auto=format&fit=crop" 
-                     alt="Seoul City" class="img-fluid rounded-4 shadow-lg">
+                <img src="png/Home.JPG" alt="Seoul City" class="img-fluid rounded-4 shadow-lg">
             </div>
         </div>
     </main>
 
     <footer class="bg-light text-center py-4 mt-5 border-top">
-        <div class="container"><p class="mb-0 text-muted">© 2024 South Korea Digital Guide | IDPA Project</p></div>
+        <div class="container">
+            <p class="mb-0 text-muted">© 2025 South Korea Digital Guide | IDPA Project</p>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 </html>
