--- a/Website/blog-2-week.html
+++ b/Website/blog-2-week.html
@@ -48,7 +48,7 @@
                     <img src="png/Titelbild_01.jpg" alt="Titlepicture, Temple" class="img-fluid rounded shadow my-3">
                     <p class="lead">
                         South Korea had been on my travel list for a long time.
-                        I’d always been fascinated by its mix of old and new — ancient palaces next to neon-lit gaming
+                        I’ve always been fascinated by its mix of old and new — ancient palaces next to neon-lit gaming
                         cafés,
                         the smell of street food drifting through modern city streets, and the rhythm of a culture that
                         feels both futuristic and deeply traditional.
