implementation of hyperlinks

--- a/Website/blog-2-week.html
+++ b/Website/blog-2-week.html
@@ -237,7 +237,7 @@
                     <div class="alert alert-light border-start border-4 border-dark">
                         <strong>💡 Things to do:</strong> <br>
                         <ul>
-                            <li>Visit <strong>Gyeongbokgung</strong> and <strong>Changdeokgung Palaces</strong>
+                            <li>Visit <span class="wiki-term" data-term="Gyeongbokgung Palace">Gyeongbokgung</span> and <span class="wiki-term" data-term="Changdeokgung Palace">Changdeokgung Palaces</span>
                                 (must-sees for first-time visitors)</li>
                             <li>Walk through <strong>Bukchon Hanok Village</strong></li>
                             <li>Experience Korean gaming culture at <strong>T1 Basecamp in Hongdae</strong></li>
