--- a/Website/blog-3-week.html
+++ b/Website/blog-3-week.html
@@ -81,12 +81,12 @@
                     <h5 class="mb-3 fw-bold ps-3">Jump to:</h5>
                     <nav class="nav flex-column">
                         <a class="sidebar-link" href="#intro">Introduction</a>
-                        <a class="sidebar-link" href="#seoul-1">Seoul (Arrival)</a>
+                        <a class="sidebar-link" href="#seoul-1">Seoul</a>
                         <a class="sidebar-link" href="#jeju">Jeju Island</a>
                         <a class="sidebar-link" href="#busan">Busan</a>
-                        <a class="sidebar-link" href="#seoul-2">Seoul (Return)</a>
+                        <a class="sidebar-link" href="#seoul-2">Seoul</a>
                         <a class="sidebar-link" href="#east-coast">East Coast</a>
-                        <a class="sidebar-link" href="#seoul-3">Seoul (Final Days)</a>
+                        <a class="sidebar-link" href="#seoul-3">Seoul</a>
                         <a class="sidebar-link" href="#final">Final Thoughts</a>
                     </nav>
                 </div>
