--- a/Website/blog-3-week.html
+++ b/Website/blog-3-week.html
@@ -138,6 +138,19 @@
                                 <li>Explore <strong>Hongdae</strong> at night</li>
                             </ul>
                         </div>
+                        <div class="row g-3 mb-4">
+                            <div class="col-md-6">
+                                <img src="pngkc/1.1.jpg" alt="Myeongdong"
+                                    class="img-fluid rounded shadow h-100 w-100 object-fit-cover hover-zoom">
+                            </div>
+
+                            <div class="col-md-6">
+                                <img src="pngkc/1.2.jpg" alt="K-BBQ"
+                                    class="img-fluid rounded shadow h-100 w-100 object-fit-cover hover-zoom">
+                            </div>
+
+                        </div>
+
 
                         <h3 class="mt-5">Day 2: <span class="wiki-term" data-term="N Seoul Tower">Namsan Tower</span> and Korean BBQ</h3>
                         <p>
