--- a/Website/blog-2-week.html
+++ b/Website/blog-2-week.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2 Week Itinerary | South Korea Guide</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
@@ -250,7 +250,6 @@
                                 <img src="png/Day1_02.jpg" alt="K-BBQ"
                                     class="img-fluid rounded shadow h-100 w-100 object-fit-cover hover-zoom">
                             </div>
-
                         </div>
 
                         <h3 class="mt-5">Day 2: Palaces and Hanok Villages</h3>
@@ -402,7 +401,6 @@
                                 <img src="png/Day4_03.jpg" alt="Cherry Blossoms"
                                     class="img-fluid rounded shadow w-100 h-100 object-fit-cover hover-zoom">
                             </div>
-
                         </div>
 
 
