--- a/Website/blog-3-week.html
+++ b/Website/blog-3-week.html
@@ -296,7 +296,7 @@
                                 <li><strong>Cheonjeyon Waterfalls</strong></li>
                             </ul>
                             <strong>🍜 Where to eat:</strong><br>
-                            Jeju Yechan (Black Pork)
+                            <a href="https://maps.app.goo.gl/ho3xzp7YCiDZt6YQA">Jeju Yechan</a> (Black Pork)
                         </div>
                         <div class="row g-3 mb-5">
                             <div class="col-6 d-flex flex-column gap-3">
@@ -386,11 +386,11 @@
                                 <li>Explore <strong>Haeundae</strong></li>
                             </ul>
                             <strong>🍜 Where to eat:</strong><br>
-                            Premium Dakgalbi
+                            <a href="https://maps.app.goo.gl/mrH1mX3BtYFr3AXH9">Premium Dakgalbi</a>
                         </div>
                         <div class="row g-3 mb-5">
                             <div class="col-md-6 d-flex flex-column gap-3">
-                                <img src="pngkc/8.1.jpeg" alt="Food Table"
+                                <img src="pngkc/8,1.jpeg" alt="Food Table"
                                     class="img-fluid rounded shadow w-100 h-100 object-fit-cover hover-zoom">
 
                                 <img src="pngkc/8.2.jpeg" alt="City View"
