--- a/Website/blog-2-week.html
+++ b/Website/blog-2-week.html
@@ -332,7 +332,7 @@
                             <strong>💡 Things to do:</strong> <br>
                             <ul>
                                 <li><a
-                                        href="https://www.getyourguide.de/seoul-l197/seoul-dmz-tour-mit-optionaler-hangebrucke-t63099/"><span class="wiki-term" data-term="DMZ">DMZ</span>
+                                        href="https://www.getyourguide.de/seoul-l197/seoul-dmz-tour-mit-optionaler-hangebrucke-t63099/">DMZ
                                         Tour</a></li>
                                 <li><strong>Yeouido Hangang Park</strong></li>
                                 <li><strong>Banpo Bridge Moonlight Rainbow Fountain</strong></li>
