changed blog added pic

--- a/Website/blog-3-week.html
+++ b/Website/blog-3-week.html
@@ -418,9 +418,15 @@
                             It was Chuseok, Korea's national harvest holiday, so most of the nation was closed and spending time with the family.
                             So as you can imagine, we didn’t do much today, just went to Haeundae again and spent some time at the beach.
                         </p>
-                        <div class="row mb-5">
-                            <div class="col-md-6 mx-auto"> <img src="pngkc/9.1.jpeg" alt="Vertical Image"
-                                    class="img-fluid rounded shadow w-100 hover-zoom">
+                        <div class="row g-3 mb-4">
+                            <div class="col-md-6">
+                                <img src="pngkc/9.1.jpeg" alt="North Korea"
+                                    class="img-fluid rounded shadow h-100 w-100 object-fit-cover hover-zoom">
+                            </div>
+
+                            <div class="col-md-6">
+                                <img src="pngkc/9.2.jpeg" alt="Statue of Split History"
+                                    class="img-fluid rounded shadow h-100 w-100 object-fit-cover hover-zoom">
                             </div>
                         </div>
 
